complete workout api endpoints
